# roxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci-release.yml
crates/roxy-api/: Cargo.toml
crates/roxy-api/src/: lib.rs  web_modules.rs  ws.rs
crates/roxy-api/web/: app.js  index.html  styles.css
crates/roxy-api/web/icons/: browserconfig.xml  site.webmanifest
crates/roxy-api/web/modules/decoder/: app.js  panel.html  settings.html
crates/roxy-api/web/modules/intruder/: app.js  panel.html  settings.html
crates/roxy-api/web/modules/plugins/: app.js  panel.html  settings.html
crates/roxy-api/web/modules/repeater/: app.js  panel.html  settings.html
crates/roxy-api/web/templates/: app.js.tera  index.html.tera
crates/roxy-app/: Cargo.toml
crates/roxy-app/src/: main.rs
crates/roxy-app/tests/: api_script.rs  proxy_e2e.rs
crates/roxy-core/: Cargo.toml
crates/roxy-core/src/: cert.rs  config.rs  intruder.rs  lib.rs  middleware.rs  model.rs  outbound.rs  proxy.rs  raw_http.rs  state.rs  tls_ech.rs
crates/roxy-plugin/: Cargo.toml
crates/roxy-plugin/src/: lib.rs
crates/roxy-storage/: Cargo.toml
crates/roxy-storage/src/: lib.rs
crates/roxy-tls/: Cargo.toml
crates/roxy-tls/src/: client.rs  ech.rs  lib.rs  server.rs
playground/: Cargo.toml
playground/src/: main.rs
plugins/: demo_substitute.py
plugins/decoder_codec/: decoder_codec.py
plugins/photon_crawler/: photon_crawler.py
plugins/photon_crawler/templates/: panel.html  script.js  settings.html
plugins/string_substitute/: string_substitute.py
plugins/string_substitute/templates/: panel.html  script.js  settings.html
plugins/sublist3r_wrapper/: sublist3r_wrapper.py
plugins/sublist3r_wrapper/templates/: panel.html  script.js  settings.html
python/roxy-plugin-sdk/: README.md  pyproject.toml
python/roxy-plugin-sdk/src/roxy_plugin_sdk/: __init__.py
scripts/: api_smoke.sh
src/: handler.rs  main.rs
src/http/: httprequest.rs  httpresponse.rs  mod.rs
src/ui/: mod.rs
src/util/: cert.rs
