[package]
name = "roxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
url = "2.5.4"
tokio-rustls = "0.26.2"
ntex = { version = "2.0", features = ["tokio"] }
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
time = { version = "0.3.41", features = ["std"] }
rustls = "0.23.27"
rustls-pki-types = "1.12.0"
webpki-roots = "1.0.0"
once_cell = "1.21.3"
