[workspace]
members = [
  "crates/roxy-core",
  "crates/roxy-tls",
  "crates/roxy-storage",
  "crates/roxy-api",
  "crates/roxy-plugin",
  "crates/roxy-app",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
brotli = "7.0"
bytes = { version = "1.10", features = ["serde"] }
dashmap = "6.1"
flate2 = "1.0"
http = "1.2"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hickory-resolver = "0.24.4"
ntex = { version = "2.16", features = ["tokio"] }
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
tantivy = "0.22"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tokio-boring = "4.17"
tokio-tungstenite = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tera = "1.20"
uuid = { version = "1.16", features = ["serde", "v4"] }
tempfile = "3.19"
url = "2.5"
zstd = "0.13"
boring = "4.21"
roxy-tls = { path = "crates/roxy-tls" }
