[package]
name = "roxy-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ntex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tera.workspace = true
uuid.workspace = true
base64.workspace = true
bytes.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures-util = "0.3"
brotli.workspace = true
flate2.workspace = true
zstd.workspace = true
roxy-core = { path = "../roxy-core" }
roxy-storage = { path = "../roxy-storage" }
roxy-plugin = { path = "../roxy-plugin" }

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
