[package]
name = "roxy-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
ntex.workspace = true
roxy-api = { path = "../roxy-api" }
roxy-core = { path = "../roxy-core" }
roxy-plugin = { path = "../roxy-plugin" }
roxy-storage = { path = "../roxy-storage" }

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
zstd.workspace = true
