[package]
name = "roxy-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rcgen.workspace = true
roxy-tls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-boring.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
brotli.workspace = true
flate2.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
