[package]
name = "roxy-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
roxy-core = { path = "../roxy-core" }

[dev-dependencies]
tempfile.workspace = true
